fix iPhone 5 shifting

--- a/css/hobbies.css
+++ b/css/hobbies.css
@@ -140,6 +140,7 @@ p {
     margin: 0;
     text-align: center;
     padding: 30px 0;
+    font-size: 2.3em;
 }
 .cinema-camera {
     width: 40%;
@@ -158,7 +159,9 @@ p {
     h1{
         font-size: 4.5em;
     }
-    
+    .cinematography h2 {
+        font-size: 2.6em;
+    }
 }
 @media only screen and (min-width: 650px) {
     p {
